waltid-services/waltid-verifier-api/k8s/deployment-gaiax-test.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: verifier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: verifier
  template:
    metadata:
      labels:
        app: verifier
      annotations:
        deployment/id: "_DEFAULT_DEPLOYMENT_"
    spec:
      containers:
        - name: verifier
          image: waltid/verifier-api:gaiax-test
          imagePullPolicy: Always
          volumeMounts:
            - name: verifier-web-config
              mountPath: "/waltid-verifier-api/config/"
              readOnly: true
            - name: verifier-request-signing
              mountPath: "/waltid-verifier-api/request-signing-secret/"
          ports:
            - containerPort: 3000
              name: http-api
      volumes:
        - name: verifier-web-config
          configMap:
            name: verifier-web-config
        - name: verifier-request-signing
          secret:
            secretName: verifier-request-signing
---
kind: Service
apiVersion: v1
metadata:
  name: verifier
spec:
  ports:
    - name: http
      port: 80
      targetPort: http-api
      protocol: TCP
  selector:
    app: verifier
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: verifier
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - verifier.gaiax-test.waltid.cloud
      secretName: verifier-tls-secret
  rules:
    - host: verifier.gaiax-test.waltid.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: verifier
                port:
                  name: http
