waltid-services/waltid-verifier-api/k8s/deployment-potential.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: issuer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: issuer
  template:
    metadata:
      labels:
        app: issuer
      annotations:
        deployment/id: "_DEFAULT_DEPLOYMENT_"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: issuer
          image: waltid/issuer-api:potential
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: issuer-web-config
              mountPath: "/waltid-issuer-api/config/"
              readOnly: true
            - name: issuer-data
              mountPath: "/waltid-issuer-api/data/"
          ports:
            - containerPort: 3000
              name: http-api
      volumes:
        - name: issuer-data
          persistentVolumeClaim:
            claimName: issuer-data-volume-claim
        - name: issuer-web-config
          configMap:
            name: issuer-web-config
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: verifier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: verifier
  template:
    metadata:
      labels:
        app: verifier
      annotations:
        deployment/id: "_DEFAULT_DEPLOYMENT_"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: verifier
          image: waltid/verifier-api:potential
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: verifier-web-config
              mountPath: "/waltid-verifier-api/config/"
              readOnly: true
            - name: verifier-request-signing
              mountPath: "/waltid-verifier-api/request-signing-secret/"
          ports:
            - containerPort: 3000
              name: http-api
      volumes:
        - name: verifier-web-config
          configMap:
            name: verifier-web-config
        - name: verifier-request-signing
          secret:
            secretName: verifier-request-signing
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: wallet-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallet-api
  template:
    metadata:
      labels:
        app: wallet-api
      annotations:
        deployment/id: "_DEFAULT_DEPLOYMENT_"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: wallet-api
          image: waltid/wallet-api:potential
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: wallet-config
              mountPath: /waltid-wallet-api/config/db.conf
              readOnly: true
              subPath: db.conf
            - name: wallet-config
              mountPath: /waltid-wallet-api/config/web.conf
              readOnly: true
              subPath: web.conf
            - name: wallet-config
              mountPath: /waltid-wallet-api/config/oidc.conf
              readOnly: true
              subPath: oidc.conf
            - name: wallet-auth-secret
              mountPath: /waltid-wallet-api/config/auth.conf
              readOnly: true
              subPath: auth.conf
            - mountPath: "/waltid-wallet-api/data/"
              name: wallet-data
          ports:
            - containerPort: 4545
              name: http-api
      volumes:
        - name: wallet-config
          configMap:
            name: wallet-config
        - name: wallet-auth-secret
          secret:
            secretName: wallet-auth-secret
        - name: wallet-data
          persistentVolumeClaim:
            claimName: wallet-data-volume-claim
---
kind: Service
apiVersion: v1
metadata:
  name: issuer
spec:
  ports:
    - name: http
      port: 80
      targetPort: http-api
      protocol: TCP
  selector:
    app: issuer
---
kind: Service
apiVersion: v1
metadata:
  name: verifier
spec:
  ports:
    - name: http
      port: 80
      targetPort: http-api
      protocol: TCP
  selector:
    app: verifier
---
kind: Service
apiVersion: v1
metadata:
  name: wallet-api
spec:
  ports:
    - name: http
      port: 80
      targetPort: http-api
      protocol: TCP
  selector:
    app: wallet-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: issuer
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - issuer.potential.walt-test.cloud
      secretName: issuer-tls-secret
  rules:
    - host: issuer.potential.walt-test.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: issuer
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: verifier
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - verifier.potential.walt-test.cloud
      secretName: verifier-tls-secret
  rules:
    - host: verifier.potential.walt-test.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: verifier
                port:
                  name: http
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: waltid-web-wallet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: waltid-web-wallet
  template:
    metadata:
      labels:
        app: waltid-web-wallet
      annotations:
        deployment/id: "_DEFAULT_DEPLOYMENT_"
    spec:
      containers:
        - name: waltid-web-wallet
          image: waltid/waltid-web-wallet:potential
          imagePullPolicy: Always
          ports:
            - containerPort: 7101
              name: http-api
---
kind: Service
apiVersion: v1
metadata:
  name: waltid-web-wallet
spec:
  ports:
    - name: http
      port: 80
      targetPort: http-api
      protocol: TCP
  selector:
    app: waltid-web-wallet
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallet-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/configuration-snippet: |
      if ($host ~ ^(.+)\.waltid\.org$) {
        return 301 https://$1.walt-test.cloud$request_uri;
      }
spec:
  tls:
    - hosts:
        - wallet.potential.walt-test.cloud
      secretName: wallet-tls-secret
  rules:
    - host: wallet.potential.walt-test.cloud
      http:
        paths:
          - path: /wallet-api/
            pathType: Prefix
            backend:
              service:
                name: wallet-api
                port:
                  name: http
          - path: /swagger
            pathType: Prefix
            backend:
              service:
                name: wallet-api
                port:
                  name: http
          - path: /api.json
            pathType: Prefix
            backend:
              service:
                name: wallet-api
                port:
                  name: http
          - path: /livez
            pathType: Prefix
            backend:
              service:
                name: wallet-api
                port:
                  name: http
          - path: /features/
            pathType: Prefix
            backend:
              service:
                name: wallet-api
                port:
                  name: http
          - path: /debug/
            pathType: Prefix
            backend:
              service:
                name: wallet-api
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: waltid-web-wallet
                port:
                  name: http
